--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Logo.png",
+            "src": "Logo.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
