--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,8 @@
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "Logo.png",
-            "sizes": "512x512",
+            "src": "Appicon.png",
+            "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         }
